syntax = "proto3";

package subscription;

option go_package = "./subscription;subscription_v1";
import "google/protobuf/empty.proto";
import "common.proto";

service SubscriptionService {
    rpc getSubscriptionListPublic(SubscriptionListPublicSearchParams) returns (SubscriptionListPublic);
    rpc subscribeProductStatus(SubscriptionProductStatus) returns (google.protobuf.Empty);
}

// entities

message Subscription {
    string id = 1;
    string user = 2;
    string email = 3;
    string product = 4;
    string lang = 5;
}

// requests

message SubscriptionListPublicSearchParams {
    string user = 1;
}

message SubscriptionProductStatus {
    string product = 1;
    string email = 2;
    string user = 3;
    common.QueryCommonParams queries = 4;
}

// responces

message SubscriptionListPublic {
    repeated string items = 1;
}
